SUBDIRS = \
	accounting_storage	\
	acct_gather_energy	\
	acct_gather_profile	\
	acct_gather_interconnect\
	acct_gather_filesystem  \
	acct_gather_nvram  \
	auth			\
	burst_buffer		\
	checkpoint		\
	core_spec		\
	crypto			\
	ext_sensors		\
	gres			\
	jobacct_gather		\
	jobcomp			\
	job_container		\
	job_submit		\
	launch			\
	mcs			\
	mpi			\
	node_features		\
	power			\
	preempt			\
	priority		\
	proctrack		\
	route			\
	sched			\
	select			\
	slurmctld		\
	switch			\
	task			\
	topology
